@@ -8,10 +8,10 @@
 //}
 
 
-int io_init(io_poller *poller)
+int io_poller_init(io_poller *poller)
 {
-	poller->funcs.exit = (void*)io_select_exit;
-	poller->funcs.exit_check = (void*)io_select_exit_check;
+	poller->funcs.dispose = (void*)io_select_poller_dispose;
+	poller->funcs.fd_check = (void*)io_select_fd_check;
 	poller->funcs.add = (void*)io_select_add;
 	poller->funcs.remove = (void*)io_select_remove;
 	poller->funcs.enable = (void*)io_select_enable;
